--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "dotenv": "^4.0.0",
+        "twit": "^2.2.9",
         "vue-resource": "^1.3.4"
     }
 }
