--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,6 @@
     ],
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "display": "standalone",
+    "display": "fullscreen",
     "description": "The app let's you schedule your tweets!!"
 }
